[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask-caching==2.3.0",
    "flask-cors==5.0.0",
    "flask-httpauth==4.8.0",
    "flask-jwt-extended==4.7.1",
    "flask-login==0.6.3",
    "flask-migrate==4.0.7",
    "flask-restful==0.3.10",
    "flask-session==0.8.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "flask==3.1.0",
    "openai==1.57.0",
    "pysocks==1.7.1",
    "pytelegrambotapi==4.25.0",
    "python-dotenv==1.0.1",
    "python-socks==2.5.3",
]
